Bug 77535 - fails to build on OpenBSD/sparc64
Summary: fails to build on OpenBSD/sparc64
Status: RESOLVED FIXED
Alias: None
Product: colord
Classification: Unclassified
Component: libcolord (show other bugs)
Version: unspecified
Hardware: SPARC OpenBSD
: medium normal
Assignee: Richard Hughes
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-04-16 18:01 UTC by Antoine Jacoutot
Modified: 2014-04-18 08:19 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Antoine Jacoutot 2014-04-16 18:01:19 UTC
Hi Richard.

Trying to build colord 1.2.0 on OpenBSD/sparc64 errors out with:

gmake[2]: Entering directory '/home/cvs/openbsd/ports/pobj/colord-1.2.0/colord-1.2.0/data'
Making all in cmf
gmake[3]: Entering directory '/home/cvs/openbsd/ports/pobj/colord-1.2.0/colord-1.2.0/data/cmf'
\
../../client/cd-it8 create-cmf CIE1931-2deg-XYZ.cmf     \
        ./CIE1931-2deg-XYZ.csv 1.0

(cd-it8:28855): GLib-ERROR **: gmem.c:103: failed to allocate 14804752269312 bytes
Makefile:601: recipe for target 'CIE1931-2deg-XYZ.cmf' failed
gmake[3]: *** [CIE1931-2deg-XYZ.cmf] Trace/BPT trap (core dumped)

It rings a bell, iirc some older release had a similar issue but then it got fixed.
Comment 1 Richard Hughes 2014-04-17 12:23:15 UTC
Hi, I don't have an sparc64 hardware handy, could you get a backtrace with export G_DEBUG=fatal-criticals set please?
Comment 2 Richard Hughes 2014-04-17 12:31:25 UTC
I've also spotted this, which *might* be the failure:

commit 919eda53dad3d635aa4b815c923bcd33f3258d3f
Author: Richard Hughes <richard@hughsie.com>
Date:   Thu Apr 17 13:28:48 2014 +0100

    Fix building the CMF spectra on OpenBSD/sparc64
    
    Do not cast gsize* to guint32* as this will not work when the size is different.
    
    Perhaps resolves: https://bugs.freedesktop.org/show_bug.cgi?id=77535

Can you try with master, and if that still fails grab the bt, thanks.
Comment 3 Antoine Jacoutot 2014-04-18 08:19:53 UTC
(In reply to comment #2)
> I've also spotted this, which *might* be the failure:
> 
> commit 919eda53dad3d635aa4b815c923bcd33f3258d3f
> Author: Richard Hughes <richard@hughsie.com>
> Date:   Thu Apr 17 13:28:48 2014 +0100
> 
>     Fix building the CMF spectra on OpenBSD/sparc64
>     
>     Do not cast gsize* to guint32* as this will not work when the size is
> different.
>     
>     Perhaps resolves: https://bugs.freedesktop.org/show_bug.cgi?id=77535
> 
> Can you try with master, and if that still fails grab the bt, thanks.

Hi Richard. This worked beautifully thanks :-)
Marking it as fixed.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.