Fix building the CMF spectra on OpenBSD/sparc64

Do not cast gsize* to guint32* as this will not work when the size is different.

Perhaps resolves: https://bugs.freedesktop.org/show_bug.cgi?id=77535